...
        <TouchableOpacity
          accessibilityLabel={accessibilityLabelNext}
          accessibilityRole="button"
          accessible={accessibility}
          onPress={this.scrollToNext}
          style={controlsButtonStyle}
          testID="PinarNextButton"
        >
          <Text
            accessibilityLabel={accessibilityLabelNext}
            accessible={accessibility}
            style={
              mergeStyles
...
        <TouchableOpacity
          accessibilityLabel={accessibilityLabelPrev}
          accessibilityRole="button"
          accessible={accessibility}
          onPress={this.scrollToPrev}
          style={controlsButtonStyle}
          testID="PinarPrevButton"
        >
          <Text
            accessibilityLabel={accessibilityLabelPrev}
            accessible={accessibility}
            style={
              mergeStyles
...
